fixed incorrect fields in the output of comments, added methods for managing and deleting books, forms and routes to them, added word wrapping style to the output of voluminous texts

--- a/public/style.css
+++ b/public/style.css
@@ -58,6 +58,11 @@ Version: 1.0.0
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
+
+.post{
+	word-break: break-all;
+}
+
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
